--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/style.css" />
-    <title>rezomeh</title>
+    <title>portfolio</title>
   </head>
   <body>
     <!---header-->
